--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "devextreme": "22.2.6",
+    "devextreme-vue": "22.2.6",
+    "uuid": "^9.0.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
